--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Social media website mockup",
   "main": "app.js",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "mongoose": "^5.4.1"
